# LRM

./: .gitignore  .gitmodules  README.md
diagram/: component.puml
docker/: .env  docker-compose.yaml
docker/gui-client/: Dockerfile
docker/gui-client/script/: entrypoint.sh
docker/script/: create_rpc_map_config.sh
docker/telegram-notifier/: Dockerfile
docker/telegram-notifier/script/: create_config.sh  entrypoint.sh
docker/user-service/: Dockerfile
docker/user-service/script/: create_db_config.sh  create_kafka_config.sh  entrypoint.sh
workspace/: CMakeLists.txt
workspace/gui-client/: CMakeLists.txt
workspace/gui-client/include/app-backend/: app-backend.hpp  contact-list-model.hpp  contact.hpp  contact_list_model.hpp
workspace/gui-client/include/config/: config.hpp  rpc_map.hpp
workspace/gui-client/include/gui-client/: gui-client.hpp
workspace/gui-client/include/util/: guard.hpp
workspace/gui-client/qml/: Main.qml  SignInPage.qml  SignUpPage.qml
workspace/gui-client/qml/page/: PersonalAreaPage.qml  SignInPage.qml  SignUpPage.qml
workspace/gui-client/qml/subpage/personal-area/: ContactsSubpage.qml  MainSubpage.qml  SettingsSubpage.qml
workspace/gui-client/qml/widget/: AlarmButtonWidget.qml  ContactListWidget.qml  SignInWidget.qml  SignUpWidget.qml
workspace/gui-client/src/: main.cpp
workspace/gui-client/src/app-backend/: app-backend.cpp
workspace/gui-client/src/gui-client/: gui-client.cpp
workspace/notification-service/: CMakeLists.txt
workspace/notification-service/src/: main.cpp
workspace/project-util/: CMakeLists.txt  README.md
workspace/project-util/cmake/: config.cmake.in
workspace/project-util/config/: rpc_map.yaml
workspace/project-util/include/project-util/format/: for_each_macro.hpp  json.hpp  json_macro.hpp  yaml.hpp  yaml_macro.hpp
workspace/proto/: CMakeLists.txt  README.md  notification-service.proto  user-service.proto
workspace/proto/cmake/: config.cmake.in
workspace/proto/proto/: user-service.proto
workspace/telegram-notifier/: go.mod  go.sum
workspace/telegram-notifier/api/kafka/telegram_notification_consumer/: telegram_notification_consumer.go
workspace/telegram-notifier/cmd/telegram-notifier/: main.go
workspace/telegram-notifier/config/: config.yaml
workspace/telegram-notifier/internal/bot/: bot.go
workspace/telegram-notifier/internal/config/: config.go
workspace/telegram-notifier/internal/storage/telegram_users/: telegram_users.go
workspace/telegram-notifier/internal/storage/telegram_users_postgre/: telegram_users_postgre.go
workspace/user-service/: CMakeLists.txt
workspace/user-service/config/: db_option.yaml  kafka_option.yaml
workspace/user-service/include/config/: config.hpp  db_option.hpp  kafka_option.hpp  rpc_map.hpp
workspace/user-service/include/db/: db_exception.h  db_manager.h  hash.h
workspace/user-service/include/kafka/: telegram_notification_producer.hpp
workspace/user-service/include/notification-client/: notification-client-json.hpp
workspace/user-service/include/notification-clients/: notification-clients.hpp
workspace/user-service/include/user-service/: alert-grpc-service.hpp  auth-grpc-service.hpp  auth-service.hpp  grpc-server.hpp  notif-client-grpc-service.hpp  sign-in-service.hpp  sign-up-service.hpp  user-grpc-server.hpp  user-service.hpp
workspace/user-service/include/util/: log.hpp
workspace/user-service/src/: main.cpp
workspace/user-service/src/db/: db_manager.cpp
workspace/user-service/src/kafka/: telegram_notification_producer.cpp
workspace/user-service/src/notification-client/: notification-client-json.cpp
workspace/user-service/src/user-service/: alert-grpc-service.cpp  auth-grpc-service.cpp  auth-service.cpp  notif-client-grpc-service.cpp  sign-in-service.cpp  sign-up-service.cpp  user-service.cpp
workspace/user-service/src/util/: log.cpp
